<resources>
    <string name="app_name">Calculator</string>
    <string name="input_placeholder">0</string>
    <string name="button_eight">8</string>
    <string name="button_seven">7</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_divide">÷</string>
    <string name="button_percentage">%</string>
    <string name="button_sqrt">√</string>
    <string name="button_clear">C</string>
    <string name="button_nine">9</string>
    <string name="button_one">1</string>
    <string name="button_plus_subtract">±</string>
    <string name="button_decimal">.</string>
    <string name="button_plus">+</string>
    <string name="button_equal">=</string>
    <string name="button_zero">0</string>
    <string name="button_three">3</string>
    <string name="button_multiply">×</string>
    <string name="button_subtract">-</string>
    <string name="button_two">2</string>
    <string-array name="buttonTags">
        <item>btn7</item>
        <item>btn8</item>
        <item>btn9</item>
        <item>btnSqrt</item>
        <item>btnClr</item>
        <item>btn4</item>
        <item>btn5</item>
        <item>btn6</item>
        <item>btnDiv</item>
        <item>btnPrc</item>
        <item>btn1</item>
        <item>btn2</item>
        <item>btn3</item>
        <item>btnMult</item>
        <item>btnSub</item>
        <item>btnPlusSub</item>
        <item>btn0</item>
        <item>btnDec</item>
        <item>btnPlus</item>
        <item>btnEqual</item>
    </string-array>

    <string-array name="buttons">
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>√</item>
        <item>C</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>÷</item>
        <item>%</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>×</item>
        <item>-</item>
        <item>±</item>
        <item>0</item>
        <item>.</item>
        <item>+</item>
        <item>=</item>
    </string-array>
</resources>