<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideNorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideSouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideWest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <TextView
        android:id="@+id/output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:text="@string/input_placeholder"
        android:textSize="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideEast"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideWest"
        app:layout_constraintTop_toBottomOf="@+id/equation" />

    <TextView
        android:id="@+id/equation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/guideEast"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideWest"
        app:layout_constraintTop_toTopOf="@+id/guideNorth" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:tag="btn8"
        android:text="@string/button_eight"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="btn7"
        android:text="@string/button_seven"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/guideWest"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="btn4"
        android:text="@string/button_four"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/guideWest"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:tag="btn5"
        android:text="@string/button_five"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toTopOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:tag="btn6"
        android:text="@string/button_six"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btnDiv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toTopOf="@+id/btn5" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:tag="btnDiv"
        android:text="@string/button_divide"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btnPrc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn6" />

    <Button
        android:id="@+id/btnPrc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:tag="btnPrc"
        android:text="@string/button_percentage"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDiv"
        app:layout_constraintEnd_toStartOf="@+id/guideEast"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/btnDiv"
        app:layout_constraintTop_toTopOf="@+id/btnDiv" />

    <Button
        android:id="@+id/btnSqrt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:tag="btnSqrt"
        android:text="@string/button_sqrt"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn9"
        app:layout_constraintEnd_toStartOf="@+id/btnClr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toTopOf="@+id/btn9" />

    <Button
        android:id="@+id/btnClr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:tag="btnClr"
        android:text="@string/button_clear"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSqrt"
        app:layout_constraintEnd_toStartOf="@+id/guideEast"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSqrt"
        app:layout_constraintTop_toTopOf="@+id/btnSqrt" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:tag="btn9"
        android:text="@string/button_nine"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btnSqrt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn8" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8sp"
        android:tag="btn1"
        android:text="@string/button_one"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlusSub"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideWest"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btnPlusSub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8sp"
        android:tag="btnPlusSub"
        android:text="@string/button_plus_subtract"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideSouth"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideWest"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btnDec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:tag="btnDec"
        android:text="@string/button_decimal"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toTopOf="@+id/btn0" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:tag="btnPlus"
        android:text="@string/button_plus"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDec"
        app:layout_constraintEnd_toStartOf="@+id/btnEqual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDec"
        app:layout_constraintTop_toTopOf="@+id/btnDec" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:tag="btnEqual"
        android:text="@string/button_equal"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlus"
        app:layout_constraintEnd_toStartOf="@+id/guideEast"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPlus"
        app:layout_constraintTop_toTopOf="@+id/btnPlus" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:tag="btn0"
        android:text="@string/button_zero"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlusSub"
        app:layout_constraintEnd_toStartOf="@+id/btnDec"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPlusSub"
        app:layout_constraintTop_toTopOf="@+id/btnPlusSub" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:tag="btn3"
        android:text="@string/button_three"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btnMult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn2" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:tag="btnMult"
        android:text="@string/button_multiply"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn3"
        app:layout_constraintEnd_toStartOf="@+id/btnSub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn3" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:tag="btnSub"
        android:text="@string/button_subtract"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnMult"
        app:layout_constraintEnd_toStartOf="@+id/guideEast"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMult"
        app:layout_constraintTop_toTopOf="@+id/btnMult" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:tag="btn2"
        android:text="@string/button_two"
        android:textSize="24dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

</androidx.constraintlayout.widget.ConstraintLayout>